plugins {
    id "org.springframework.boot" version "2.2.5.RELEASE"
}

apply plugin: "java"
apply plugin: "io.spring.dependency-management"

sourceCompatibility = 11
targetCompatibility = 11
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

ext {
    projectName = 'qiita-backup'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
    implementation 'commons-io:commons-io:2.6'

    testImplementation 'junit:junit:4.12'
    testImplementation 'de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1'
    testImplementation 'org.assertj:assertj-core:3.15.0'
}

jar {
    archiveBaseName = projectName
}

bootJar.mustRunAfter clean

[compileJava, compileTestJava]*.options*.compilerArgs = ["-Xlint:deprecation"]
